# polynomial_3-sat

./: .gitignore  CMakeLists.txt  DimacsReader.cpp  DimacsReader.h  EdgeSequenceSack.cpp  EdgeSequenceSack.h  EdgeSequesnce.cpp  EdgeSequesnce.h  LiteralsMap.h  Preprocessor.cpp  Preprocessor.h  README.md  Utilities.cpp  Utilities.h  VertexSequence.cpp  VertexSequence.h  clause.h  main.cpp
